<resources>
    <string name="app_name">Ford Cambodia</string>
    <string name="information">Information</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="server_error">Server Error</string>
    <string name="cancel">Cancel</string>
    <string name="version">Version</string>
    <string name="khmer">ភាសាខ្មែរ</string>
    <string name="english">English</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_in">Confirm in</string>
    <string name="language">Language</string>

    <string name="vehicle">Vehicle</string>
    <string name="connect_your_car">Connect Your Car</string>
    <string name="comment">Comment and Feedback</string>
    <string name="social_network">Social Network</string>
    <string name="power_by">Power by</string>
    <string name="survey">Customer Survey</string>
    <string name="financing">Financing Calculator</string>
    <string name="setting">Setting</string>
    <string name="assistant">Assistant</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="new_and_promotion">New and Promotion</string>
    <string name="chat">Live Chat</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="location">Location</string>

    <string name="skip">Skip</string>
    <string name="ford">Ford</string>
    <string name="cambodia">Cambodia</string>
    <string name="next">Next</string>
    <string name="start_use">Start Use</string>

    <string name="Product">Product</string>
    <string name="gallery">Gallery</string>
    <string name="key">Key Feature</string>
    <string name="video">Video</string>
    <string name="color">Colorizer</string>
    <string name="interior">Interior</string>
    <string name="exterior">Exterior</string>
    <string name="price">Price</string>
    <string name="finance_calculator">Ford Financing Calculator</string>
    <string name="contact_for">Contact us for more information</string>
    <string name="phone_1">012 333 975 (Phnom Penh)</string>
    <string name="phone_2">063 766 661 (Siem Reap)</string>
    <string name="load_pay">Load Payment Calculator</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="amount_load">Load Amount</string>
    <string name="down_pay">Down Payment%</string>
    <string name="interest_rate">Interest Rate%</string>
    <string name="term_or_year">Term or Year</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="service_center">Ford Service Center</string>
    <string name="maintenance_tip">Maintenance Tip</string>
    <string name="all_type">All Type</string>
    <string name="accessory_price">Accessory and Price</string>
    <string name="all_model">All Model</string>
    <string name="all_year">Model Year</string>
    <string name="code">Code: </string>
    <string name="prices">Price:</string>
    <string name="user_info">User Info</string>
    <string name="name">Name</string>
    <string name="phone">Phone *</string>
    <string name="input_info">Please input you information</string>
    <string name="input_code">Please input code that we have</string>
    <string name="send_to">Send to</string>
    <string name="your_code">Your Code</string>
    <string name="not_receive">Not yet receive code?</string>
    <string name="click_here">Click Here</string>
    <string name="require_input">Please fill all required fields</string>
    <string name="verify_code">Verify Code</string>
    <string name="wrong_code">Your code is invalid! Please check and try again</string>
    <string name="wrong_phone">Your phone number is invalid! Please check and try again</string>

    <string name="your_booking">Your Booking</string>
    <string name="mileage">Mileage: </string>
    <string name="inspection">Inspection</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="booking_id">Booking ID</string>
    <string name="plate_number">Plate Number</string>
    <string name="add_new_booking">Add New Booking</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="cancel_booking">your booking has been cancelled</string>
    <string name="select_your_car">Please Select Your Car</string>
    <string name="select_car">Select Car</string>
    <string name="select_service_desc">Please Choose The Service Type</string>
    <string name="select_mileage">Select Mileage</string>
    <string name="select_service">Select Service</string>
    <string name="select_mileage_desc">Pleas Select Mileage</string>
    <string name="other_mile">Other Mileage</string>
    <string name="input_mile">Please Input Mileage</string>
    <string name="select_require">Please select mileage in list</string>
    <string name="please_input_mile">Please input current mileage of your car</string>
    <string name="other">Other</string>
    <string name="select_issue">Select Issue</string>
    <string name="text_here">Text Here</string>
    <string name="select_service_station">Please select service station</string>
    <string name="service_station">Service Station</string>
    <string name="select_date">Select Date</string>

    <string name="select_time">Select Time</string>
    <string name="full">Full</string>
    <string name="free">Available</string>
    <string name="holiday">Holiday</string>

    <string name="please_select_issue">Please Select Issue</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="eight">12:00</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="unavailable_time">Unavailable Time</string>
    <string name="oil_engine">Replace the engine oil</string>
    <string name="second_remain">Second Remaining</string>
    <string name="add_vehicle">Add Vehicle</string>

    <string name="plate">Plate(Ex:XXXX 2A-0000)</string>
    <string name="chassis">Chassis(Ex: XXXXXX)</string>
    <string name="prefix">Phnom Penh</string>
    <string name="no_plate">Do not have plate number</string>
    <string name="notification">Notification</string>
    <string name="history">Vehicle History Page</string>
    <string name="histories">History</string>
    <string name="history_booking">History</string>
    <string name="ass_sale">Sale Contact/Working Hour</string>
    <string name="ass_service">Service Contact/Working Hour</string>
    <string name="ass_roadside">24h Roadside Assistant</string>
    <string name="open_hour">Open Hour</string>
    <string name="contact_hotline">Contact Hotline</string>
    <string name="term_and_condition">Term and Condition</string>
    <string name="give_us">Give Us a Call Anytime</string>
    <string name="at">at</string>
    <string name="status_canceled">You booking has been canceled</string>
    <string name="status_accepted">You booking has been accepted</string>
    <string name="show_room">Show Room</string>
    <string name="gas_station">Gas Station</string>
    <string name="osc">OSC</string>
    <string name="filter_location">Filter your location</string>
    <string name="select_model">Please select model and model year</string>
    <string name="input_plate">Please select and input plate number</string>

    <string name="google_maps_key">AIzaSyCpxO71kfVCbr1hOaqx8ZQK8advYnL7PCI</string>
</resources>
