<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="@dimen/iv_height_280"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/iv_height_15"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tvOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/input_mile"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:gravity="center"
            android:layout_marginRight="@dimen/iv_height_25"
            android:layout_marginLeft="@dimen/iv_height_25"
            android:id="@+id/edtOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOther"
            android:layout_marginTop="@dimen/iv_height_20"
            android:hint="@string/other_mile"
            android:inputType="number"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/iv_height_25"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="@style/Button.Primary.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/red_A400" />

            <Button
                android:id="@+id/btnOk"
                style="@style/Button.Primary.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>