<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityFinancingCalculator">
    <include layout="@layout/top_menu_activity"/>
    <TextView
        android:layout_marginTop="@dimen/iv_height_20"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size_small"
        android:text="@string/load_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/iv_height_10"
        android:padding="@dimen/iv_height_15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/amount_load"
            android:textSize="@dimen/text_size_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtPrice"
            android:textSize="@dimen/text_size_small"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/iv_height_15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/down_pay"
            android:textSize="@dimen/text_size_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="@dimen/text_size_small"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/iv_height_10"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/interest_rate"
            android:textSize="@dimen/text_size_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:textSize="@dimen/text_size_small"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/iv_height_15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_weight="1"
            android:text="@string/term_or_year"
            android:textSize="@dimen/text_size_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textSize="@dimen/text_size_small"
                android:layout_weight="1"
                android:hint="@string/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:textSize="@dimen/text_size_small"
                android:layout_weight="1"
                android:hint="@string/month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/iv_height_5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/iv_height_5"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/iv_height_13">

                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/iv_height_5"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/iv_height_13">

                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>