<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivityOtp">

    <include
        android:id="@+id/include4"
        layout="@layout/top_menu_activity" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_height_45"
        android:text="@string/input_code"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4" />

    <TextView
        android:id="@+id/tvSendTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_height_25"
        android:text="@string/send_to"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:singleLine="true"
        android:inputType="number"
        android:layout_marginLeft="@dimen/iv_height_25"
        android:layout_marginRight="@dimen/iv_height_25"
        android:id="@+id/edtCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_height_20"
        android:gravity="center"
        android:hint="@string/your_code"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintTop_toBottomOf="@+id/tvSendTo"
        tools:layout_editor_absoluteX="25dp" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_marginTop="@dimen/iv_height_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCode" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/linearResend"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/iv_height_25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edtCode" >
        <TextView
            android:layout_marginRight="@dimen/iv_height_25"
            android:text="@string/not_receive"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvReSend"
            android:textColor="@color/colorPrimary"
            android:text="@string/click_here"
            android:textSize="@dimen/text_size_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginRight="-10dp"
        android:layout_marginLeft="-10dp"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/iv_height_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>