<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivitySetting">

    <include
        android:id="@+id/include10"
        layout="@layout/top_menu_activity" />

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/iv_height_35"
        app:layout_constraintTop_toBottomOf="@+id/include10"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/iv_height_20"
            android:layout_marginRight="@dimen/iv_height_15" />

        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_marginRight="@dimen/iv_height_20"
            android:layout_marginLeft="@dimen/iv_height_20"
            android:id="@+id/tv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/notification" />
    </RelativeLayout>

    <View
        android:layout_marginRight="@dimen/iv_height_20"
        android:layout_marginLeft="@dimen/iv_height_20"
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="@dimen/iv_height_1"
        android:layout_alignBottom="@+id/edtuser"
        android:layout_marginTop="@dimen/iv_height_15"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

    <RelativeLayout
        android:layout_marginTop="@dimen/iv_height_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view9"
        tools:ignore="MissingConstraints">

        <TextView
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="@dimen/iv_height_20"
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/language" />

        <RadioGroup
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/iv_height_20"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
            <RadioButton
                android:id="@+id/rdb_english"
                android:checked="true"
                android:textColor="@color/colorPrimary"
                android:text="@string/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:checked="false"
                android:id="@+id/rdb_khmer"
                android:textColor="@color/colorPrimary"
                android:text="@string/khmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>